unpackaged/main/default/objects/Hive_Project__c/Hive_Project__c.object-meta.xml
<CustomObject>
    <description>US-0008533 - HIVE Project</description>
    <label>Hive Project</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hive Project</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>