unpackaged/main/default/objects/Hive_Project__c/fields/BA_Complexity_days__c.field-meta.xml
<CustomField>
    <fullName>BA_Complexity_days__c</fullName>
    <description>US-0011982 - Feature request &amp; Project object Technical estimation fields</description>
    <label>BA Complexity (days)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>