unpackaged/main/default/objects/Hive_Project__c/fields/BUSponsor__c.field-meta.xml
<CustomField>
    <fullName>BUSponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0010250</description>
    <label>BU sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hive_Project</relationshipName>
    <type>Lookup</type>
</CustomField>