unpackaged/main/default/objects/Hive_Project__c/fields/Complexity_Estimation_dev_story_points__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Estimation_dev_story_points__c</fullName>
    <description>US-0011982 - Feature request &amp; Project object Technical estimation fields
this field show in layout</description>
    <formula>ComplexityEstimationDevStoryPoints__c</formula>
    <label>Complexity Estimation (dev story points)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>