unpackaged/main/default/objects/Hive_Project__c/fields/ComplexityEstimationDevStoryPoints__c.field-meta.xml
<CustomField>
    <fullName>ComplexityEstimationDevStoryPoints__c</fullName>
    <description>US-0011982 - Feature request &amp; Project object Technical estimation fields
only use for Trigger to calculate points in apex FeatureRequestTriggerHandler.cls</description>
    <label>Complexity Estimation (dev story points)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>