unpackaged/main/default/objects/Hive_Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>US-0008533 - HIVE Project</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>