unpackaged/main/default/objects/Hive_Project__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>US-0008533 - HIVE Project</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>