unpackaged/main/default/objects/Hive_Project__c/fields/Estimated_New_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Estimated_New_Licenses__c</fullName>
    <description>US-0008533 - HIVE Project</description>
    <label>Estimated New Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>