unpackaged/main/default/objects/Hive_Project__c/fields/Expected_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Training_Date__c</fullName>
    <label>Expected Training Date</label>
    <type>Date</type>
</CustomField>