unpackaged/main/default/objects/Hive_Project__c/fields/Go_Live_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008533 - HIVE Project</description>
    <label>Go Live Sprint</label>
    <referenceTo>copado__Sprint__c</referenceTo>
    <relationshipName>hive_Product</relationshipName>
    <type>Lookup</type>
</CustomField>