unpackaged/main/default/objects/Hive_Project__c/fields/Number_of_Sprint_min__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sprint_min__c</fullName>
    <description>US-0011982 - Feature request &amp; Project object Technical estimation fields</description>
    <label>Number of Sprint (min)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>