unpackaged/main/default/objects/Hive_Project__c/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008533 - HIVE Project</description>
    <label>Parent Project</label>
    <referenceTo>Hive_Project__c</referenceTo>
    <relationshipName>hive_Product</relationshipName>
    <type>Lookup</type>
</CustomField>