unpackaged/main/default/objects/Hive_Project__c/fields/Process_Map_link__c.field-meta.xml
<CustomField>
    <fullName>Process_Map_link__c</fullName>
    <description>US-0008533 - HIVE Project</description>
    <label>Process Map (link)</label>
    <length>4800</length>
    <type>Html</type>
</CustomField>