unpackaged/main/default/objects/Hive_Project__c/fields/Project_Charter_link__c.field-meta.xml
<CustomField>
    <fullName>Project_Charter_link__c</fullName>
    <description>US-0008533 - HIVE Project</description>
    <label>Project Charter (link)</label>
    <type>Url</type>
</CustomField>