unpackaged/main/default/objects/Hive_Project__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>US-0010250 - SM - Adding new fields to Hive Project</description>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>EEC</fullName>
                <isActive>false</isActive>
                <label>EEC</label>
            </value>
            <value>
                <fullName>ES</fullName>
                <isActive>false</isActive>
                <label>ES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>