unpackaged/main/default/objects/Hive_Project__c/fields/Scoped_Project_Costs__c.field-meta.xml
<CustomField>
    <fullName>Scoped_Project_Costs__c</fullName>
    <description>US-0011982</description>
    <label>Scoped Project Costs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>