unpackaged/main/default/objects/Hive_Project__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>US-0008533 - HIVE Project</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>