unpackaged/main/default/objects/Hive_Project__c/fields/Total_Number_of_Users__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Users__c</fullName>
    <description>US-0008533 - HIVE Project</description>
    <label>Total Number of Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>