unpackaged/main/default/objects/Hive_Project__c/fields/TrailMix__c.field-meta.xml
<CustomField>
    <fullName>TrailMix__c</fullName>
    <description>US-0009008</description>
    <inlineHelpText>Link to training materials for the current project</inlineHelpText>
    <label>TrailMix</label>
    <type>Url</type>
</CustomField>