unpackaged/main/default/objects/Hive_Project__c/fields/Training_Material_Status__c.field-meta.xml
<CustomField>
    <fullName>Training_Material_Status__c</fullName>
    <defaultValue>&quot;Not Started&quot;</defaultValue>
    <inlineHelpText>For HIVE team to track status of training materials</inlineHelpText>
    <label>Training Material Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Signed off by BA/PO</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>