unpackaged/main/default/objects/Hive_Project__c/recordTypes/Hive_Project.recordType-meta.xml
<RecordType>
    <fullName>Hive_Project</fullName>
    <active>true</active>
    <description>HIVE Project - a time limited work on a HIVE Product, that required discovery, collection of Feature requests, prioritization across them. Realization of HIVE Project as a rule takes more than 2 sprints and 15 story points.</description>
    <label>HIVE Project</label>
</RecordType>