unpackaged/main/default/objects/Hive_Project__c/recordTypes/Hive_Subproject.recordType-meta.xml
<RecordType>
    <fullName>Hive_Subproject</fullName>
    <active>true</active>
    <label>HIVE Subproject</label>
</RecordType>