unpackaged/main/default/objects/Hive_Project__c/listViews/active_HIVE_Projects.listView-meta.xml
<ListView>
    <fullName>active_HIVE_Projects</fullName>
    <columns>Parent_Project__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Process_Map_link__c</columns>
    <columns>Project_Charter_link__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Hive_Project__c.Hive_Project,Hive_Project__c.Hive_Subproject</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Draft,Completed,Rejected,On-hold</value>
    </filters>
    <label>active HIVE Projects</label>
</ListView>