unpackaged/main/default/objects/Hive_Project__c/listViews/All_HIVE_Project.listView-meta.xml
<ListView>
    <fullName>All_HIVE_Project</fullName>
    <columns>Parent_Project__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Process_Map_link__c</columns>
    <columns>Project_Charter_link__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Hive_Project__c.Hive_Project,Hive_Project__c.Hive_Subproject</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Rejected</value>
    </filters>
    <label>All HIVE Project</label>
</ListView>