unpackaged/main/default/objects/Hive_Project__c/listViews/completed_Hive_Projects.listView-meta.xml
<ListView>
    <fullName>completed_Hive_Projects</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>completed Hive Projects</label>
</ListView>