unpackaged/main/default/objects/Hive_Project__c/listViews/Seller_Portal.listView-meta.xml
<ListView>
    <fullName>Seller_Portal</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>SP</value>
    </filters>
    <label>Seller Portal</label>
</ListView>